--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <!-- <link rel="icon" href="/favicon.ico"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;">
-    <!-- <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" /> -->
-    <title>Hokoisle Auth</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
